# news-tracker

./: .dockerignore  .env.cloud.example  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.cloud.yml  docker-compose.yml  pyproject.toml
.beads/: .gitignore  interactions.jsonl  issues.jsonl
.github/workflows/: ci.yml
benchmarks/inference_runtime/: 2026-04-14_cpu_baseline_torch.json  2026-04-14_cpu_onnx.json  2026-04-14_cpu_onnx_pruned.json  2026-04-14_cpu_torch.json
deployments/: alert_rules.yml  alertmanager.yml  prometheus.yml
deployments/cloud/: neon-init.sh  setup-oracle-vm.sh
docs/: CLOUD_DEPLOYMENT.md  onnx-feasibility-assessment.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
migrations/: 001_embedding_vector_768.sql  001_initial_schema.sql  002_add_minilm_embedding.sql  003_add_authority_score.sql  004_add_themes_and_metrics.sql  005_add_causal_graph_tables.sql  006_add_alerts_table.sql  007_add_backtest_tables.sql  008_update_alerts_trigger_type.sql  013_authority.sql  014_sources.sql  015_add_narrative_runs.sql  016_extend_alerts_subjects.sql  017_extend_alert_trigger_types.sql  018_intelligence_schemas.sql  019_concept_registry.sql  020_concept_relationships.sql  021_coverage_profiles.sql  022_filing_artifacts.sql  023_evidence_claims.sql  024_review_queue.sql  025_claim_dead_letters.sql  026_resolved_assertions.sql  027_passage_mappings.sql  028_read_model.sql  029_reconcile_runtime_schema.sql  030_reconcile_embedding_schema.sql  031_publish_graph_dedupe_hardening.sql  032_read_model_timestamp_repair.sql  033_factor_series.sql  034_sec_identifiers.sql  035_sec_structured_cache.sql  036_sec_filing_delta_events.sql  037_sec_ownership_events.sql  038_market_structure_events.sql  039_market_plumbing_alert_trigger_types.sql  040_innovation_alias_metadata.sql  041_patent_signals.sql  042_research_signals.sql  043_claim_numeric_facts.sql  (+4 more)
scripts/: docker-build-serial.sh  docker-entrypoint.sh  validate_feeds.py  xui-auth-login.sh
src/: __init__.py  cli.py
src/alerts/: __init__.py  broadcaster.py  channels.py  config.py  dispatcher.py  evidence.py  repository.py  schemas.py  service.py  (+1 more)
tests/: __init__.py  conftest.py
(+710 files in other folders)
