[project]
name = "news-tracker"
version = "0.1.0"
description = "Multi-platform financial data ingestion framework"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Core
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Async HTTP
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",

    # Platform APIs
    "tweepy>=4.14.0",
    "praw>=7.7.0",
    "feedparser>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "readability-lxml>=0.8.0",

    # Queue & Cache
    "redis[hiredis]>=5.0.0",

    # Database
    "asyncpg>=0.29.0",
    "pgvector>=0.2.0",

    # NLP & Deduplication
    "datasketch>=1.6.0",
    "rapidfuzz>=3.5.0",
    "langdetect>=1.0.9",

    # NER
    "spacy>=3.7.0",
    "fastcoref>=2.1.0",

    # Embeddings (requires Python 3.11-3.12 for torch compatibility)
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "numpy>=1.24.0",

    # Observability
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-exporter-otlp>=1.22.0",
    "opentelemetry-instrumentation-asyncpg>=0.43b0",
    "opentelemetry-instrumentation-redis>=0.43b0",
    "opentelemetry-instrumentation-httpx>=0.43b0",

    # CLI
    "click>=8.1.0",
    "python-dotenv>=1.0.0",

    # API Server
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "respx>=0.20.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "types-redis>=4.6.0",
]

[project.scripts]
news-tracker = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "performance: marks tests as performance benchmarks (may be slow)",
    "integration: marks tests as integration tests (require running services)",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
